# DetermineSystem

./: README.md  pyproject.toml  requirements.txt
tests/: test_determine_system.py  test_supported_systems.ini
