[tool.poetry]
name = "determinesystem"
version = "0.0.1"
description = "Simple system name determiner."
authors = [
    "Josh Braun <josbrau@sandia.gov>"
]
readme = "README.md"
documentation = "http://localhost.8080/DetermineSystem/doc/index.html"
repository = "https://github.com/sandialabs/determinesystem"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: DevOps',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]
packages = [
    { include = 'determinesystem' }
]


[tool.poetry.dependencies]
python = "^3.6"
configparser = "^5.0.1"
configparserenhanced = {git = "https://github.com/sandialabs/ConfigParserEnhanced.git", rev = "master"}
keywordparser = {git = "https://github.com/sandialabs/KeywordParser.git", rev = "master"}


[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
Sphinx = "^3.5.1"
sphinx-argparse = "^0.2.5"
sphinx-rtd-theme = "^0.5.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
